# all-in-one

./: CHANGELOG.md  README.md  modal_train.py  pyproject.toml
src/allin1/models/: allinone.py  dinat.py  loaders.py  natten_compat.py
src/allin1/training/: trainer.py
