[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "allin1"
dynamic = ["version"]
description = "All-In-One Music Structure Analyzer"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["music", "beat", "downbeat", "tracking", "structure", "analysis", "allin1"]
authors = [
  { name = "Taejun Kim", email = "taejun@kaist.ac.kr" },
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "numpy>=1.24",
  "librosa>=0.10.0",
  "natten>=0.17.0",
  "demucs>=4.0.0",
  "hydra-core>=1.3.0",
  "omegaconf>=2.3.0",
  "huggingface_hub>=0.20.0",
  "matplotlib>=3.7.0",
]

[project.optional-dependencies]
train = [
  "lightning>=2.0.0",
  "timm>=0.9.0",
  "wandb>=0.16.0",
  "mir_eval>=0.8.0",
]

[project.urls]
Documentation = "https://github.com/mir-aidj/all-in-one#readme"
Issues = "https://github.com/mir-aidj/all-in-one/issues"
Source = "https://github.com/mir-aidj/all-in-one"

[project.scripts]
allin1 = "allin1.cli:main"
allin1-train = "allin1.training.train:main"
allin1-preprocess = "allin1.training.preprocess:main"

[tool.hatch.version]
path = "src/allin1/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/allin1"]
